@@ -16,7 +16,7 @@ import com.czertainly.core.mapper.workflows.EventHistoryMapper;
 import com.czertainly.core.mapper.workflows.PaginationResponseMapper;
 import com.czertainly.core.model.auth.ResourceAction;
 import com.czertainly.core.security.authz.ExternalAuthorization;
-import com.czertainly.core.service.EventService;
+import com.czertainly.core.service.EventExternalService;
 import com.czertainly.core.service.ResourceService;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -28,7 +28,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
-public class EventServiceImpl implements EventService {
+public class EventServiceImpl implements EventExternalService {
 
     private ResourceService resourceService;
 
@@ -53,6 +53,7 @@ public class EventServiceImpl implements EventService {
 
     @Override
     @Transactional
+    @ExternalAuthorization(resource = Resource.RESOURCE_EVENT, action = ResourceAction.DETAIL)
     public PaginationResponseDto<ObjectEventHistoryDto> getEventHistory(Resource resource, UUID uuid, PaginationRequestDto pagination) throws NotFoundException {
         // Check if object is present for the given resource and uuid and if user has permissions for details of the object
         resourceService.getResourceObject(resource, uuid);
@@ -125,17 +126,22 @@ public class EventServiceImpl implements EventService {
                         Collectors.mapping(row -> (UUID) row[1], Collectors.toList())
                 ));
 
-        // Batch 3: all trigger histories for the paginated object UUIDs in one query, then group in Java
+        // Batch 3: all trigger histories for the paginated object UUIDs in one query, then group in Java.
+        // Null object_uuid (ignored certificates) is a valid paginated entry; filter it from the IN parameter
+        // since OR t.objectUuid IS NULL in the query handles that clause. Hibernate renders an empty IN as (1=0),
+        // so the OR branch still fires when the page contains only null entries.
         List<UUID> allPaginatedObjectUuids = paginatedObjectUuidsPerEvent.values().stream()
-                .flatMap(Collection::stream).distinct().toList();
-        Map<UUID, Map<UUID, List<TriggerHistory>>> triggerHistoriesByEventAndObject = allPaginatedObjectUuids.isEmpty()
-                ? Map.of()
-                : triggerHistoryRepository.findByEventHistoryUuidInAndObjectUuidInOrderByEventHistoryUuidAscObjectUuidAscTriggeredAtDesc(eventHistoryUuids, allPaginatedObjectUuids)
-                        .stream().collect(Collectors.groupingBy(
-                                TriggerHistory::getEventHistoryUuid,
-                                LinkedHashMap::new,
-                                Collectors.groupingBy(TriggerHistory::getObjectUuid, LinkedHashMap::new, Collectors.toList())
-                        ));
+                .flatMap(Collection::stream).filter(Objects::nonNull).distinct().toList();
+        boolean hasNullObjectUuid = paginatedObjectUuidsPerEvent.values().stream().anyMatch(list -> list.contains(null));
+        Map<UUID, Map<UUID, List<TriggerHistory>>> triggerHistoriesByEventAndObject = new LinkedHashMap<>();
+        if (!allPaginatedObjectUuids.isEmpty() || hasNullObjectUuid) {
+            for (TriggerHistory th : triggerHistoryRepository.findByEventHistoryUuidsAndObjectUuids(eventHistoryUuids, allPaginatedObjectUuids)) {
+                triggerHistoriesByEventAndObject
+                        .computeIfAbsent(th.getEventHistoryUuid(), k -> new LinkedHashMap<>())
+                        .computeIfAbsent(th.getObjectUuid(), k -> new ArrayList<>())
+                        .add(th);
+            }
+        }
 
         List<EventHistoryDto> eventHistoriesResponse = eventHistories.stream()
                 .map(eventHistory -> {
